# devfluent

./: .dockerignore  .gitignore  CLAUDE.md  PROJECT_SPEC.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/scripts/: create_test_user.py  seed_vocab.py
backend/src/: config.py  database.py  main.py
backend/src/ai/: context.py  llm.py  stt.py  tts.py
backend/src/ai/prompts/: assessment.py  base.py  interview.py  levels.py
backend/src/bot/: handlers.py  keyboards.py  middleware.py
backend/src/channels/: base.py  telegram.py
backend/src/core/: assessment.py  conversation.py  feedback.py  mock_interview.py  study_plan.py  summary.py  vocabulary.py
backend/src/models/: __init__.py  assessment.py  base.py  conversation.py  metrics.py  study_plan.py  user.py  vocabulary.py
backend/src/services/: billing.py  notifications.py  reports.py
backend/src/utils/: audio.py  storage.py  tokens.py
backend/tests/: conftest.py  test_assessment.py  test_context.py  test_conversation.py  test_interview.py  test_prompts.py
specs/001-backend-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-backend-setup/checklists/: requirements.md
specs/001-backend-setup/contracts/: provider-interfaces.md  webhook-api.md
