[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "devfluent-backend"
version = "0.1.0"
description = "DevFluent - AI-powered English tutoring for Brazilian developers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-telegram-bot[webhooks]>=21.0",
    "openai>=1.30",
    "groq>=0.11.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "tiktoken>=0.8.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "redis[hiredis]>=5.2.0",
    "boto3>=1.35.0",
    "pydub>=0.25.1",
    "apscheduler>=3.10.4",
    "posthog>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.6.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
